Update location description in index.html to include additional areas served, enhancing customer awareness of service coverage.

--- a/templates/index.html
+++ b/templates/index.html
@@ -570,7 +570,7 @@
     <div class="container">
         <div class="section-header">
             <h2 class="section-title">Nossa Localização em Barueri</h2>
-            <p class="section-description">Venha nos visitar ou entre em contato - Atendemos toda região de Barueri, Alphaville e Tamboré</p>
+            <p class="section-description">Venha nos visitar ou entre em contato - Atendemos toda região de Barueri, Alphaville, Tamboré, Itapevi, Cotia, Jandira, Carapicuíba, Osasco e algumas regiões de São Paulo</p>
         </div>
     </div>
     <div class="map-container">
