--- a/templates/admin/orcamentos_ar.html
+++ b/templates/admin/orcamentos_ar.html
@@ -53,7 +53,11 @@
                             <i class="fas fa-edit"></i>
                         </a>
                         {% if orcamento.pdf_id %}
-                        <a href="{{ url_for('download_orcamento_ar_pdf', orcamento_id=orcamento.id) }}" class="btn-icon" title="Baixar PDF" target="_blank">
+                        <a href="{{ url_for('download_orcamento_ar_pdf', orcamento_id=orcamento.id) }}" class="btn-icon" title="Baixar PDF" target="_blank" style="color: #dc3545;">
+                            <i class="fas fa-file-pdf"></i>
+                        </a>
+                        {% else %}
+                        <a href="{{ url_for('view_orcamento_ar', orcamento_id=orcamento.id) }}" class="btn-icon" title="Gerar PDF (acesse a visualização)" style="opacity: 0.5;">
                             <i class="fas fa-file-pdf"></i>
                         </a>
                         {% endif %}
